Adds SNES to rom config, add toggles between GBA/MGBA and SUPA/SFC, check rom zip contents that it contains any of the supported rom formats, cleanup RomPath construction

--- a/Components/Pages/BiosConfig.razor
+++ b/Components/Pages/BiosConfig.razor
@@ -454,7 +454,7 @@
         font-size: 0.9em;
     }
 
-    .media (max-width: 768px) {
+    @@media (max-width: 768px) {
         .bios-file-row
 
     {
@@ -923,6 +923,7 @@
     {
         public string Id { get; set; } = "";
         public string FileName { get; set; } = "";
+        //TODO dynamically construct ExpectedPath
         public string ExpectedPath { get; set; } = "";
         public string SelectedPath { get; set; } = "";
         public string Sha1 { get; set; } = "";
